src/objects/Broker_Role__c.object
<CustomObject>
    <description>Archived system function</description>
    <fields>
        <fullName>Broker__c</fullName>
        <label>Broker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Broker</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Broker_s_Role__c</fullName>
        <label>Broker&apos;s Role</label>
        <picklist>
            <picklistValues>
                <fullName>Listing- Listing Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sale- Listing Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sale- Selling Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sale- Mortgage Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Leasing- Landlord Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease- Landlord Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease- Tenant Representative</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Brokerage_Firm__c</fullName>
        <formula>Broker__r.Account.Name</formula>
        <label>Brokerage Firm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escrow__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Escrow</label>
        <referenceTo>Escrow__c</referenceTo>
        <relationshipName>Brokers_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fee_to_Broker__c</fullName>
        <inlineHelpText>What is the commission amount the broker will receive?</inlineHelpText>
        <label>Fee to Broker</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease</label>
        <referenceTo>Lease__c</referenceTo>
        <relationshipName>Brokers_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Listing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Listing</label>
        <referenceTo>Listing__c</referenceTo>
        <relationshipName>Brokers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Leasing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Leasing</label>
        <referenceTo>Project_Leasing__c</referenceTo>
        <relationshipName>Brokers_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sale</label>
        <referenceTo>Sale__c</referenceTo>
        <relationshipName>Brokers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>system.brokers role</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Broker__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Broker Role ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>system.brokers roles</pluralLabel>
    <recordTypes>
        <fullName>External_Broker</fullName>
        <active>false</active>
        <label>External Broker</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_Broker</fullName>
        <active>true</active>
        <label>Internal Broker</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>